[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Menu/Textures/MHTitle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menu/Textures/MenuPlay.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Textures/MenuOptions.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/Textures/MenuLore.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Menu/Main.gd" type="Script" id=5]
[ext_resource path="res://Assets/Menu/Textures/Background2.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Menu/ScrollingBackround.gd" type="Script" id=7]
[ext_resource path="res://addons/gut/icon.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/Textures/CreditsMenu.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 2, 0, 123, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 2, 128, 123, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 2, 64, 123, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 1, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 1, 128, 63, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 1, 64, 63, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 63, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 63, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 19 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 0, 38, 64, 18 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 0, 19, 64, 19 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_vector = Vector2( -1, -1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Buttons" type="Control" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -64.0
margin_right = 128.0
margin_bottom = 64.0
keep_pressed_outside = true
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer/Buttons/PlayButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -54.3351
margin_bottom = 113.665
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoreButton" type="TextureButton" parent="VBoxContainer/Buttons/PlayButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -56.4539
margin_right = 216.0
margin_bottom = 111.546
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer/Buttons/PlayButton"]
anchor_left = 0.452893
anchor_top = 1.0431
anchor_right = 0.538831
anchor_bottom = 1.15248
margin_left = -68.0
margin_top = -3.0
margin_right = 67.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 2
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 11 )
texture_hover = SubResource( 12 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GutButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
margin_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
text = "Gut"
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/PlayButton/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/PlayButton/LoreButton" to="." method="_on_LoreButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/PlayButton/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="GutButton" to="." method="_on_GutButton_pressed"]
